# cairn-web-ui

./: .gitignore  README.md  deny.toml  justfile  lefthook.yml  renovate.json
.github/: dependabot.yml
.github/workflows/: auto-rerun-flaky.yml  auto-update-prs.yml  ci.yml  claude-review.yml  claude.yml  coverage.yml  heavy.yml  mutation-weekly.yml  nightly.yml
audit/: README.md  design.md  devops.md  diagnostics.md  security.md
docs/: ci.md  roadmap.md
docs/superpowers/plans/: 2026-06-01-editor-rework.md  2026-06-01-graph-view.md  2026-06-01-live-preview-editor.md  2026-06-01-phase2-tauri-desktop.md  2026-06-01-ui1-design-foundation.md  2026-06-01-ui2-dialogs-settings.md  2026-06-01-walking-skeleton-ui.md  2026-06-02-ce-a-click-to-edit.md  2026-06-02-ce-b-rich-table-editor.md  2026-06-02-ui3-document-live-preview.md  2026-06-05-ui4a-obsidian-graph-core.md  2026-06-09-command-palette.md  2026-06-09-ui4b-graph-force-settings.md  2026-06-09-ui4c-graph-color-groups.md  2026-06-09-ui4d-local-graph-mode.md  2026-06-10-ci-two-tier-nightly.md  2026-06-10-editor-tabs.md  2026-06-10-folder-tree-sidebar.md  (+25 more)
scripts/: check-contract-drift.sh  sync-contract.sh
src-tauri/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tauri.conf.json
src-tauri/src/: lib.rs
web/: .eslintrc.cjs  .gitignore  .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  stryker.config.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/e2e/: skeleton.spec.ts
web/src/: index.css  main.tsx  vite-env.d.ts  vitest.setup.ts
(+265 files in other folders)
