[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
cairn-domain   = { git = "https://github.com/tau-rs/cairn", rev = "079f9f9f5178d357f3df743fc077ffd727cffe89" }
cairn-app      = { git = "https://github.com/tau-rs/cairn", rev = "079f9f9f5178d357f3df743fc077ffd727cffe89" }
cairn-infra    = { git = "https://github.com/tau-rs/cairn", rev = "079f9f9f5178d357f3df743fc077ffd727cffe89" }
cairn-contract = { git = "https://github.com/tau-rs/cairn", rev = "079f9f9f5178d357f3df743fc077ffd727cffe89" }
cairn-service  = { git = "https://github.com/tau-rs/cairn", rev = "079f9f9f5178d357f3df743fc077ffd727cffe89" }

[dev-dependencies]
tempfile = "3"
